Fixed (finally) round tripping of ROME Atom entries. Fixed some issues found by FindBugs.